<resources>
    <string name="app_name">Tradish</string>
    <string name="FAB_header">Quick Options Menu</string>
    <string name="slogan"> Tonight, Let\'s keep it Tradish </string>
<!--Placeholder-->
    <string name="lipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </string>
<!-- Navigation Drawer-->
    <string name="open_nav"> Open navigation </string>
    <string name="close_nav"> Close navigation </string>

<!--Login Fragment-->
    <string name="login_text_view">Login to Tradish</string>
    <string name="login_button">Login</string>

<!--Register Fragment-->
    <string name="signup_button">Sign Up</string>
    <string name="register_text">Register your account</string>
    <string name="already_registered">Already a Tradish foodie? <b>Sign in here!</b></string>

<!--Ethnic Groups-->
    <string-array name="ethnicities">
        <item>Brazilian</item>
        <item>Cajun</item>
        <item>Canadian</item>
        <item>Chinese</item>
        <item>Cuban</item>
        <item>French</item>
        <item>German</item>
        <item>Greek</item>
        <item>Halal</item>
        <item>Italian</item>
        <item>Jamaican</item>
        <item>Japanese</item>
        <item>Korean</item>
        <item>Kosher</item>
        <item>Lebanese</item>
        <item>Mexican</item>
        <item>Southern BBQ</item>
        <item>Thai</item>
        <item>Venezuelan</item>
    </string-array>
</resources>